test/e2e/testdata/ingresses/basic.yaml
# Copyright 2026 The KubeLB Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Basic Ingress for e2e tests
# Usage: Set $name, $host via Chainsaw bindings
# Backend service must exist with same $name
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ($name)
  namespace: default
spec:
  ingressClassName: kubelb
  rules:
    - host: ($host)
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ($name)
                port:
                  number: 80
