test/e2e/testdata/ingresses/multi-path.yaml
# Copyright 2026 The KubeLB Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Multi-path Ingress for e2e tests
# Usage: Set $name, $host, $backend1, $backend2 via Chainsaw bindings
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ($name)
  namespace: default
spec:
  ingressClassName: kubelb
  rules:
    - host: ($host)
      http:
        paths:
          - path: /app1
            pathType: Prefix
            backend:
              service:
                name: ($backend1)
                port:
                  number: 80
          - path: /app2
            pathType: Prefix
            backend:
              service:
                name: ($backend2)
                port:
                  number: 80
